# plant-app

./: .gitignore  Jenkinsfile  README.md  docker-compose-jenkins.yml  docker-compose.yml
backend/: docker-compose.yml
backend/app_service/: .coverage  .dockerignore  Dockerfile  README.md  main.py  prometheus_metrics.py  pyproject.toml  requirements.txt
backend/app_service/api_routes/: endpoints.py
backend/app_service/config/: cloudinary.py  config.py
backend/app_service/crud_apis/: __init__.py  jobs_api.py  otp_api.py  predictions_api.py  users_api.py
backend/app_service/db/: connections.py
backend/app_service/dependencies/: auth.py
backend/app_service/models/: model.py  otp.py  otptoken.py  prediction.py  user.py
backend/app_service/routes/: __init__.py  auth_router.py  prediction_router.py  profile_router.py
backend/app_service/schemas/: UserDashboardResponseSchema.py
backend/app_service/services/: auth_service.py  prediction_service.py  profile_service.py
backend/app_service/templates/: email_change.html  email_forget_password.html  email_signup.html  email_welcome.html
backend/app_service/tests/unit/: test_auth.py  test_prediction.py  test_profile.py
backend/app_service/utils/: auth_utils.py  email_utils.py  idx2label.json  jinja_env.py  otp_utils.py
backend/db_service/: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
backend/db_service/config/: config.py
backend/db_service/crud/: job_crud.py  otp_crud.py  prediction_crud.py  user_crud.py
backend/db_service/db/: connections.py
backend/db_service/models/: job.py  model.py  prediction.py
backend/db_service/routes/: jobs_routes.py  otps_routes.py  predictions_routes.py  users_routes.py
backend/model_service/: .dockerignore  Dockerfile  Dockerfile copy  Dockerfile_dev  Dockerfile_prod  README.md  dependencies.py  main.py  prometheus_metrics.py  pyproject.toml  requirements-base.txt  requirements.txt  requirements_without_torch.txt
backend/model_service/config/: config.py
backend/model_service/db/: connections.py
backend/model_service/manager/: __init__.py  initializer.py  manager.py  plant_model.py
backend/model_service/models/: __init__.py  initializer.py  manager.py  model.py  plant_model.py  registry.py
backend/model_service/routes/: prediction_route.py
backend/model_service/saved_models/model_paths/: model_paths.py
backend/model_service/saved_models/utils/: label2idx.json
backend/model_service/services/: prediction_service.py
backend/model_service/tests/unit/: test_prediction.py
backend/monitoring/: prometheus.yml
frontend/: Dockerfile  README.md  eslint.config.mjs  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/Agricultural Themed Web App/: .dockerignore  Dockerfile  README.md  index.html  package-lock.json  package.json
frontend/Agricultural Themed Web App/src/: App.tsx  AppInitializer.tsx  ExamplePage.tsx  index.css  main.tsx
frontend/src/: App.tsx  AppInitializer.tsx  ExamplePage.tsx  index.css  main.tsx
frontend/src/components/: confirm-email-change.tsx  confirm-otp-for-signup.tsx  confirmation-modal.tsx  crops-coverage.tsx  landing.tsx  login.tsx
frontend/src/config/: api.jsx  apiRoutes.jsx
frontend/src/redux/: store.tsx
frontend/src/services/: apiconnector.tsx  authService.tsx  (+2 more)
(+43 files in other folders)
