[project]
name = "app-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.2"
dependencies = [
    "bcrypt==4.0.1",
    "click>=8.2.1",
    "cloudinary>=1.44.1",
    "fastapi[all]>=0.116.2",
    "ipykernel>=6.30.1",
    "jinja2>=3.1.6",
    "motor>=3.7.1",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.10.1",
    "python-jose[cryptography]>=3.5.0",
]
