[project]
name = "db-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.2"
dependencies = [
    "click>=8.3.0",
    "fastapi==0.116.2",
    "motor==3.7.1",
    "pydantic-settings==2.10.1",
    "pydantic[email]>=2.11.9",
    "uvicorn[standard]>=0.36.0",
]
