[project]
name = "model-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.2"
dependencies = [
    "fastapi==0.116.2",
    "joblib>=1.5.2",
    "pydantic-settings==2.10.1",
    "torch==2.3.0",
    "torchaudio==2.3.0",
    "torchvision==0.18.0",
]
