[project]
name = "model-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.2"
dependencies = [
    "fastapi==0.116.2",
    "joblib>=1.5.2",
    "motor>=3.7.1",
    "numpy<2",
    "pydantic-settings==2.10.1",
    "python-multipart>=0.0.20",
    "scikit-learn==1.2.2",
    "torch==2.3.0",
    "torchaudio==2.3.0",
    "torchvision==0.18.0",
    "uvicorn==0.34.0",
]
