[project]
name = "model-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.10.0",
    "black==25.9.0",
    "click==8.3.0",
    "colorama==0.4.6",
    "coverage==7.10.7",
    "dnspython==2.8.0",
    "fastapi==0.116.2",
    "filelock==3.19.1",
    "fsspec==2025.9.0",
    "gdown>=5.2.0",
    "gunicorn==23.0.0",
    "h11==0.16.0",
    "idna==3.10",
    "iniconfig==2.1.0",
    "intel-openmp==2021.4.0",
    "jinja2==3.1.6",
    "joblib==1.5.2",
    "markupsafe==3.0.2",
    "mkl==2021.4.0",
    "motor==3.7.1",
    "mpmath==1.3.0",
    "mypy-extensions==1.1.0",
    "networkx==3.5",
    "numpy==1.26.4",
    "packaging==25.0",
    "pathspec==0.12.1",
    "pillow==11.3.0",
    "pip==25.2",
    "pipdeptree==2.28.0",
    "platformdirs==4.4.0",
    "pluggy==1.6.0",
    "prometheus-client==0.23.1",
    "pydantic==2.11.9",
    "pydantic-core==2.33.2",
    "pydantic-settings==2.10.1",
    "pygments==2.19.2",
    "pymongo==4.15.1",
    "pytest==8.4.2",
    "pytest-asyncio==1.2.0",
    "pytest-cov==7.0.0",
    "python-dotenv==1.1.1",
    "python-multipart==0.0.20",
    "pytokens==0.1.10",
    "ruff==0.14.0",
    "scikit-learn==1.2.2",
    "scipy==1.16.2",
    "sniffio==1.3.1",
    "starlette==0.48.0",
    "sympy==1.14.0",
    "tbb==2021.13.1",
    "threadpoolctl==3.6.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.1",
    "uvicorn==0.34.0",
]
